--- a/netflix-settings.html
+++ b/netflix-settings.html
@@ -276,6 +276,19 @@
           <div class="col-10">
             <div class="row border-top border-secondary mt-4"></div>
           </div>
+          <div class="row justify-content-center">
+            <div class="col-3 mt-3">
+              <p class="text-black-50">PLAIN DETAILS</p>
+            </div>
+            <div class="col-3 mt-3">
+              <p>
+                Premium <button class="btn btn-outline-dark">ULTRA HD</button>
+              </p>
+            </div>
+            <div class="col-3 mt-3">
+              <a class="text-decoration-none" href="#">Change plan</a>
+            </div>
+          </div>
         </div>
       </div>
     </main>
