--- a/netflix-settings.html
+++ b/netflix-settings.html
@@ -276,8 +276,8 @@
           <div class="col-10">
             <div class="row border-top border-secondary mt-4"></div>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-3 mt-3">
+          <div class="row justify-content-between">
+            <div class="col-3 offset-1 mt-3">
               <p class="text-black-50">PLAIN DETAILS</p>
             </div>
             <div class="col-3 mt-3">
