--- a/netflix-settings.html
+++ b/netflix-settings.html
@@ -21,7 +21,7 @@
     <header>
       <nav class="navbar navbar-expand-md bg-black px-4" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="netflix-clone.html"
             ><img
               src="Netflix-assets/assets/netflix_logo.png"
               alt="Bootstrap"
