--- a/netflix-clone.html
+++ b/netflix-clone.html
@@ -583,7 +583,7 @@
     </main>
     <footer class="container-fluid bg-black pt-5">
       <div class="row justify-content-center">
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <div class="row">
             <div class="col col-12 d-flex">
               <div>
@@ -598,7 +598,7 @@
           </div>
           <div class="row mt-4">
             <div
-              class="col col-3 text-white-50 justify-content-center align-content-center"
+              class="col-3 text-white-50 justify-content-center align-content-center"
             >
               <p>Audio and Subtitle</p>
               <p>Media Center</p>
@@ -606,21 +606,21 @@
               <p>Contact Us</p>
             </div>
             <div
-              class="col col-3 text-white-50 justify-content-center align-content-center"
+              class="col-3 text-white-50 justify-content-center align-content-center"
             >
               <p>Audio Description</p>
               <p>Investor Relations</p>
               <p>Legal Notice</p>
             </div>
             <div
-              class="col col-3 text-white-50 justify-content-center align-content-center"
+              class="col-3 text-white-50 justify-content-center align-content-center"
             >
               <p>Help Center</p>
               <p>Jobs</p>
               <p>Cookie Preferences</p>
             </div>
             <div
-              class="col col-3 text-white-50 justify-content-center align-content-center"
+              class="col-3 text-white-50 justify-content-center align-content-center"
             >
               <p>Gift Cards</p>
               <p>Terms of Use</p>
